--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Node.js dependencies
 node_modules/
 pnpm-lock.yaml
-package.json
+package-lock.json
 
 # Build outputs
 dist/
@@ -25,7 +25,6 @@ Thumbs.db
 
 # Environment / secrets
 .env
-.env.*
 *.local
 *.secret
 *.key
